Fix text line break in code

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1361,6 +1361,7 @@ footer p {
 			line-height: 1.5rem;
 			padding: 5px;
 			font-family: Courier;
+			white-space: pre-wrap;
 		}
 
 		pre {
